fix: ensure content won't overflow with perfect-scrollbar

--- a/src/components/SnowUI/layout/SnowUIDashboardLayout/SnowUILayout.module.scss
+++ b/src/components/SnowUI/layout/SnowUIDashboardLayout/SnowUILayout.module.scss
@@ -1,6 +1,3 @@
 .contentArea {
-  height: calc(100vh - rem(62.69px));
-}
-
-.container {
+  height: calc(100vh - rem(71px));
 }
